# ZincBeta

./: .gitmodules  .lgtm.yml  CMakeLists.txt  LICENSE  README.md
.github/workflows/: CodeCoverage.yml  CodeQLAnalysis.yml  CoverityScan.yml  Emscripten.yml  Linux.yml  MacOS.yml  StaticAnalysis.yml  StyleCheck.yml  Windows.yml
ZincBetaLib/: CMakeLists.txt
tests/: CMakeLists.txt
tests/ZincBetaLibTest/: CMakeLists.txt
tests/ZincBetaLibTest/src/: dummy.cpp
